@@ -1,3 +1,11 @@
+Thu Oct  1 19:24:45 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * bin/tao_orb_tests.lst:
+          Enabled Bug_3154_Regression for ce/labview/fuzz
+
+        * tests/Bug_3154_Regression/run_test.pl:
+          Converted to the new test framework
+
 Thu Oct  1 19:00:33 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/Bug_3276_Regression/run_test.pl:
